--- a/app_client/index.html
+++ b/app_client/index.html
@@ -6,7 +6,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <title>Skeleton app</title>
+    <title>Commandez votre repas !</title>
 
     <!-- CSS
     ––––––––––––––––––––––––––––––––––––––––––––––––––-->
@@ -20,7 +20,7 @@
     <!-- header
     ––––––––––––––––––––––––––––––––––––––––––––––––––-->
     <div class="w3-container w3-teal">
-        <h1>Skeleton App</h1>
+        <h1>Juste Mange</h1>
     </div>
 
 
@@ -39,7 +39,6 @@
     <script src="js/myapp.js"></script>
     <script src="js/samplefactory.js"></script>
     <script src="home/homecontroller.js"></script>
-    <script src="page2/page2controller.js"></script>
 
 
   </body>
