myapp.js cleaned, menu page added

--- a/app_client/index.html
+++ b/app_client/index.html
@@ -38,7 +38,8 @@
     ––––––––––––––––––––––––––––––––––––––––––––––––––-->
     <script src="js/myapp.js"></script>
     <script src="js/samplefactory.js"></script>
-    <script src="home/homecontroller.js"></script>
+    <script src="page_home/homecontroller.js"></script>
+    <script src="page_menu/menucontroller.js"></script>
 
 
   </body>
