--- a/app_client/page_home/home.html
+++ b/app_client/page_home/home.html
@@ -5,9 +5,7 @@
 
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <!-- <link href="https://fonts.googleapis.com/css?family=Poppins:100,200,300,400,500,600,700,800,900" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Monoton&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Miss+Fajardose&display=swap" rel="stylesheet"> -->
+
 
     <link rel="stylesheet" href="../css/open-iconic-bootstrap.min.css">
     <link rel="stylesheet" href="../css/animate.css">
@@ -27,11 +25,11 @@
     <link rel="stylesheet" href="../css/flaticon.css">
     <link rel="stylesheet" href="../css/icomoon.css">
     <link rel="stylesheet" href="../css/style.css">
-    <!-- <script src="../jslibs/angular.min.js"></script>
+    <script src="../jslibs/angular.min.js"></script>
     <script src="../jslibs/angular-route.min.js"></script>
     <script src="../jslibs/angular-ui-router.min.js"></script>
-    <script src="../js/controller/appClientController.js"></script>
-    <script src="../js/clientApp.js"></script> -->
+    <script src="../js/clientApp.js"></script>
+    <script src="homeController.js"></script>
 </head>
 
 <body>
@@ -658,8 +656,6 @@
     <script src="../js/jsTemplate/bootstrap-datepicker.js"></script>
     <script src="../js/jsTemplate/jquery.timepicker.min.js"></script>
     <script src="../js/jsTemplate/scrollax.min.js"></script>
-    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBVWaKrjvy3MaE7SQ74_uJiULgl1JY0H2s&sensor=false"></script>
-    <script src="../js/jsTemplate/google-map.js"></script>
     <script src="../js/jsTemplate/main.js"></script>
 
 </body>
