--- a/app_client/page_menu/menu.html
+++ b/app_client/page_menu/menu.html
@@ -25,7 +25,7 @@
     <link rel="stylesheet" href="../css/icomoon.css">
     <link rel="stylesheet" href="../css/style.css">
   </head>
-  <body>
+  <body ng-controller='menuController'>
 
 
     <section class="hero-wrap hero-wrap-2" style="background-image: url('../images/bg_3.jpg');" data-stellar-background-ratio="0.5">
