--- a/app_client/index.html
+++ b/app_client/index.html
@@ -25,10 +25,7 @@
     <link rel="stylesheet" href="css/flaticon.css">
     <link rel="stylesheet" href="css/icomoon.css">
     <link rel="stylesheet" href="css/style.css">
-    <script src="jslibs/angular.min.js"></script>
-    <script src="jslibs/angular-route.min.js"></script>
-    <script src="jslibs/angular-ui-router.min.js"></script>
-    <script src="js/clientApp.js"></script>
+
 </head>
 
 <body>
@@ -44,10 +41,10 @@
                 <ul class="navbar-nav ml-auto">
                     <li class="nav-item active"><a href="#home" class="nav-link">Home</a></li>
                     <li class="nav-item"><a href="#resto" class="nav-link">Restaurant</a></li>
-                    <li class="nav-item"><a href="#menu" class="nav-link">Menu</a></li>
+                    <!-- <li class="nav-item"><a href="#menu" class="nav-link">Menu</a></li> -->
                     <li class="nav-item"><a href="#cart" class="nav-link">cart</a></li>
                     <li class="nav-item"><a href="#contact" class="nav-link">Contact</a></li>
-                    <li class="nav-item cta"><a href="#reservation" class="nav-link">Book a table</a></li>
+                    <li class="nav-item cta"><a href="#reservation" class="nav-link">Order Now</a></li>
                 </ul>
             </div>
         </div>
@@ -55,7 +52,10 @@
 <div ng-view></div>
 </body>
 
-
+<script src="jslibs/angular.min.js"></script>
+<script src="jslibs/angular-route.min.js"></script>
+<script src="jslibs/angular-ui-router.min.js"></script>
+<script src="js/clientApp.js"></script>
   <script src="js/jsTemplate/jquery.min.js"></script>
   <script src="js/jsTemplate/jquery-migrate-3.0.1.min.js"></script>
   <script src="js/jsTemplate/popper.min.js"></script>
@@ -71,5 +71,6 @@
   <script src="js/jsTemplate/jquery.timepicker.min.js"></script>
   <script src="js/jsTemplate/scrollax.min.js"></script>
   <script src="js/jsTemplate/main.js"></script>
+
 
 </html>
