--- a/app_client/page_menu/menu.html
+++ b/app_client/page_menu/menu.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" ng-app='clientApp' ng-controller='menuController'>
   <head>
     <title>Menu</title>
     <meta charset="utf-8">
@@ -33,7 +33,7 @@
       <div class="container">
         <div class="row no-gutters slider-text align-items-end justify-content-center">
           <div class="col-md-9 ftco-animate text-center">
-            <h1 class="mb-2 bread">The Specialties</h1>
+            <h1 class="mb-2 bread">Our Specialties</h1>
             <p class="breadcrumbs"><span class="mr-2"><a href="index.html">Home <i class="ion-ios-arrow-forward"></i></a></span> <span>Menu <i class="ion-ios-arrow-forward"></i></span></p>
           </div>
         </div>
@@ -45,7 +45,7 @@
     		<div class="row justify-content-center mb-5 pb-2">
           <div class="col-md-7 text-center heading-section ftco-animate">
           	<span class="subheading">Specialties</span>
-            <h2 class="mb-4"> Menu</h2>
+            <h2 class="mb-4">Our Menu</h2>
           </div>
         </div>
         <div class="row">
@@ -341,7 +341,7 @@
     	</div>
     </section>
 
-    <section class="ftco-section ftco-no-pt ftco-no-pb">
+    <!-- <section class="ftco-section ftco-no-pt ftco-no-pb">
 			<div class="container-fluid px-0">
 				<div class="row d-flex no-gutters">
           <div class="col-md-6 ftco-animate makereservation p-4 p-md-5 pt-5 pt-md-0">
@@ -404,12 +404,10 @@
               </div>
             </form>
           </div>
-          <div class="col-md-6 d-flex align-items-stretch pb-5 pb-md-0">
-						<div id="map" class="border"></div>
-					</div>
+
         </div>
 			</div>
-		</section>
+		</section> -->
 
     <footer class="ftco-footer ftco-bg-dark ftco-section">
       <div class="container-fluid px-md-5 px-3">
