--- a/app_client/app/restaurant-detail/restaurant-detail.template.html
+++ b/app_client/app/restaurant-detail/restaurant-detail.template.html
@@ -27,7 +27,10 @@
                             Browse by categories
                         </h2>
                         <p class="section__subheading text-center">
-                            {{ $ctrl.restaurant.description }}
+                            <ul>
+                                <li>Phone : {{ $ctrl.restaurant.phone }}</li>
+                                <li>Address : {{ $ctrl.restaurant.address }}</li>
+                            </ul>
                         </p>
 
                     </div>
@@ -57,6 +60,7 @@
                 </div>
                 <div class="row section_menu__grid" id="menu_images">
 
+                    <!--
                     <div class="col-md-6 section_menu__grid__item mains" ng-repeat="img in $ctrl.restaurant.images">
                         <div class="section_menu__item">
                             <div class="row">
@@ -76,9 +80,10 @@
                                         $15
                                     </div>
                                 </div>
-                            </div> <!-- / .row -->
+                            </div>
                         </div>
                     </div>
+                    -->
 
                 </div> <!-- / .row -->
             </div> <!-- / .container -->
