--- a/app_client/app/index.html
+++ b/app_client/app/index.html
@@ -25,6 +25,7 @@
         <!-- AngularJS-->
         <script src="lib/angular/angular.js"></script>
         <script src="lib/angular-route/angular-route.js"></script>
+        <script src="ngCart/dist/ngCart.min.js"></script>
 
         <script src="app.module.js"></script>
         <script src="app.config.js"></script>
