ajout ngCart.js

--- a/app_client/app/index.html
+++ b/app_client/app/index.html
@@ -87,6 +87,9 @@
                         <!-- Navbar navigation: Right -->
                         <ul class="navbar-nav ml-auto">
                             <li class="nav-item">
+                                <ngcart-checkout service="log">Checkout cart</ngcart-checkout>
+                            </li>
+                            <li class="nav-item">
                                 <a class="nav-link" href="news-and-events.html">News & Events</a>
                             </li>
                             <li class="nav-item">
