--- a/app_client/app/index.html
+++ b/app_client/app/index.html
@@ -40,6 +40,7 @@
         <script src="restaurant-list/restaurant-list.component.js"></script>
         <script src="restaurant-new/restaurant-new.module.js"></script>
         <script src="restaurant-new/restaurant-new.component.js"></script>
+        <script src="auth/auth.js"></script>
 
     </head>
     <body>
