--- a/app_client/app/index.html
+++ b/app_client/app/index.html
@@ -39,6 +39,8 @@
         <script src="restaurant-list/restaurant-list.component.js"></script>
         <script src="restaurant-new/restaurant-new.module.js"></script>
         <script src="restaurant-new/restaurant-new.component.js"></script>
+        <script src="menu-new/menu-new.module.js"></script>
+        <script src="menu-new/menu-new.component.js"></script>
 
     </head>
     <body>
