--- a/app_client/app/restaurant-list/restaurant-list.template.html
+++ b/app_client/app/restaurant-list/restaurant-list.template.html
@@ -27,8 +27,7 @@
                             Browse by categories
                         </h2>
                         <p class="section__subheading text-center">
-                        Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-                        Ratione numquam eos perferendis itaque hic unde, ad, laudantium minima.
+                        <a class="btn btn-outline-secondary" href="#!/restaurants/new" role="button">Create Restaurant</a>
                         </p>
 
                     </div>
