ajout de la route restaurants/menus

--- a/app_client/app/index.html
+++ b/app_client/app/index.html
@@ -89,7 +89,7 @@
                         <!-- Navbar navigation: Right -->
                         <ul class="navbar-nav ml-auto">
                             <li class="nav-item">
-                                <ngcart-checkout service="log" settings="{ url:'/checkout' }">Checkout cart</ngcart-checkout>
+                                <ngcart-checkout service="log" settings="{ url:'http://localhost:3000/oredrs/new' }">Checkout cart</ngcart-checkout>
                             </li>
                             <li class="nav-link">
                                 <ngcart-summary>
