--- a/app_client/app/index.html
+++ b/app_client/app/index.html
@@ -19,6 +19,9 @@
         <link rel="stylesheet" href="assets/plugins/lightbox/css/lightbox.min.css">
         <link rel="stylesheet" href="assets/plugins/flickity/flickity.min.css">
 
+        <!-- Latest compiled and minified Bootstrap CSS -->
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+
         <!-- CSS Global -->
         <link rel="stylesheet" href="assets/css/theme.min.css">
 
