--- a/app_client/app/menu-new/menu-new.template.html
+++ b/app_client/app/menu-new/menu-new.template.html
@@ -57,6 +57,11 @@
                                         <input type="number" class="form-control" id="reservation__form__price" name="reservation__form__price" placeholder="Price" ng-model="$ctrl.price">
                                         <div class="invalid-feedback"></div>
                                     </div>
+                                    <div class="form-group">
+                                        <label class="sr-only" for="reservation__form__description">category</label>
+                                        <input type="text" class="form-control" id="reservation__form__category" name="reservation__form__category" placeholder="category" ng-model="$ctrl.category">
+                                        <div class="invalid-feedback"></div>
+                                    </div>
                                     <!-- <div class="form-group">
                                         <label class="sr-only" for="reservation__form__is_available">Is_available</label>
                                         <input type="checkbox" class="form-control" id="reservation__form__is_available" name="reservation__form__is_available" placeholder="Is_available" ng-model="$ctrl.is_available">
