--- a/app_client/app/restaurant-detail/restaurant-detail.template.html
+++ b/app_client/app/restaurant-detail/restaurant-detail.template.html
@@ -73,18 +73,18 @@
                             <div class="row">
                                 <div class="col-3 align-self-center">
                                     <div class="section_menu__item__img">
-                                        <img ng-src="" alt="...">
+                                        <img src="https://source.unsplash.com/random/?menu,{{ menu.name }}" alt="...">
                                     </div>
                                 </div>
                                 <div class="col-7">
-                                    <h4>{{ restaurant.name }}</h4>
+                                    <h4>{{ menu.name }}</h4>
                                     <p>
                                     {{ img }}
                                     </p>
                                 </div>
                                 <div class="col-2">
                                     <div class="section_menu__item__price text-center">
-                                        $15
+                                        ${{ menu.price }}
                                     </div>
                                 </div>
                             </div>
