affichage du cart plus joli

--- a/app_client/app/index.html
+++ b/app_client/app/index.html
@@ -91,12 +91,11 @@
 
                         <!-- Navbar navigation: Right -->
                         <ul class="navbar-nav ml-auto">
-                            <li class="nav-item">
-                                <ngcart-checkout service="log" settings="{ url:'http://localhost:3000/oredrs/new' }">Checkout cart</ngcart-checkout>
-                            </li>
                             <li class="nav-link">
+                                <a href="/#!/checkout">
                                 <ngcart-summary>
                                 </ngcart-summary>
+                                </a>
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link" href="news-and-events.html">News & Events</a>
