--- a/app_client/app/index.html
+++ b/app_client/app/index.html
@@ -45,6 +45,8 @@
         <script src="restaurant-new/restaurant-new.component.js"></script>
         <script src="menu-new/menu-new.module.js"></script>
         <script src="menu-new/menu-new.component.js"></script>
+        <script src="menu-delete/menu-delete.module.js"></script>
+        <script src="menu-delete/menu-delete.component.js"></script>
 
     </head>
     <body>
