--- a/app_client/app/index.html
+++ b/app_client/app/index.html
@@ -53,11 +53,8 @@
 
         <!-- NAVBAR
             ================================================== -->
-            <nav class="navbar navbar-light navbar-expand-lg fixed-top">
+            <nav class="navbar navbar-light bg-dark navbar-expand-lg fixed-top">
                 <div class="container">
-
-                    <!-- Navbar: Brand -->
-                    <a class="navbar-brand navbar-brand_2 d-lg-none" href="index.html">Touché</a>
 
                     <!-- Navbar: Toggler -->
                     <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -67,29 +64,30 @@
                     <!-- Navbar: Collapse -->
                     <div class="collapse navbar-collapse" id="navbarSupportedContent">
 
+
+                        <!-- Brand name -->
+                        <a class="navbar-brand navbar-brand_2 d-none d-lg-flex" href="/#!/restaurants">
+                            Touché
+                        </a>
+
                         <!-- Navbar navigation: Left -->
                         <ul class="navbar-nav mr-auto">
                             <li class="nav-item">
-                                <a class="nav-link" href="about-us.html">About Us</a>
-                            </li>
-                            <li class="nav-item dropdown active">
-                                <a class="nav-link dropdown-toggle" href="http://example.com" id="nav-item__menu" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                                    Menu
-                                </a>
-                                <div class="dropdown-menu" aria-labelledby="nav-item__menu">
-                                    <a class="dropdown-item active" href="menu.html">Menu: Standard</a>
-                                    <a class="dropdown-item" href="menu_no-images.html">Menu: No Images</a>
-                                </div>
+                                <a class="nav-link" href="#">About Us</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="reservation.html">Reservation</a>
+                                <a class="nav-link" href="/#!/restaurants">Our Restaurants</a>
                             </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="news-and-events.html">News & Events</a>
+                            </li>       
+                            <li class="nav-item">
+                                <a class="nav-link" href="#">Gallery</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="#">Contact</a>
+                            </li>                     
                         </ul>
-
-                        <!-- Brand name -->
-                        <a class="navbar-brand navbar-brand_2 d-none d-lg-flex" href="index.html">
-                            Touché
-                        </a>
 
                         <!-- Navbar navigation: Right -->
                         <ul class="navbar-nav ml-auto">
@@ -98,15 +96,6 @@
                                 <ngcart-summary>
                                 </ngcart-summary>
                                 </a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link" href="news-and-events.html">News & Events</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link" href="gallery.html">Gallery</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link" href="contact-us.html">Contact</a>
                             </li>
                         </ul>
 
