--- a/app_client/app/index.html
+++ b/app_client/app/index.html
@@ -79,7 +79,7 @@
                                 <a class="nav-link" href="/#!/restaurants">Our Restaurants</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="news-and-events.html">News & Events</a>
+                                <a class="nav-link" href="#">News & Events</a>
                             </li>       
                             <li class="nav-item">
                                 <a class="nav-link" href="#">Gallery</a>
