quick fixes in templates

--- a/app_client/app/index.html
+++ b/app_client/app/index.html
@@ -73,7 +73,7 @@
                         <!-- Navbar navigation: Left -->
                         <ul class="navbar-nav mr-auto">
                             <li class="nav-item">
-                                <a class="nav-link" href="#">About Us</a>
+                                <a class="nav-link" href="#footer">About Us</a>
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link" href="/#!/restaurants">Our Restaurants</a>
@@ -85,7 +85,7 @@
                                 <a class="nav-link" href="#">Gallery</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="#">Contact</a>
+                                <a class="nav-link" href="#footer">Contact</a>
                             </li>                     
                         </ul>
 
@@ -108,7 +108,7 @@
 
             <!-- FOOTER
                 ================================================== -->
-                <footer class="section section_footer">
+                <footer class="section section_footer" id="footer">
                     <div class="container">
                         <div class="row">
                             <div class="col-sm-4">
