--- a/app_client/app/restaurant-new/restaurant-new.template.html
+++ b/app_client/app/restaurant-new/restaurant-new.template.html
@@ -24,7 +24,7 @@
 
                         <!-- Heading -->
                         <h2 class="section__heading text-center">
-                            Online table reservation
+                            Add your new restaurant here !
                         </h2>
 
                         <!-- Subheading -->
