--- a/app_client/app/restaurant-detail/restaurant-detail.template.html
+++ b/app_client/app/restaurant-detail/restaurant-detail.template.html
@@ -81,6 +81,7 @@
                                     </p>
                                     <p>
                                     <a  href="#!/restaurants/{{$ctrl.restaurantId}}/menus/{{menu.id}}/delete"><i class="far fa-trash-alt"></i></a>
+                                    <a  href="#!/restaurants/{{$ctrl.restaurantId}}/menus/{{menu.id}}/edit"><i class="far fa-edit"></i></a>
                                     </p>
                                 </div>
                                 <div class="col-2">
