--- a/app_client/app/index.html
+++ b/app_client/app/index.html
@@ -47,7 +47,8 @@
         <script src="menu-new/menu-new.component.js"></script>
         <script src="menu-delete/menu-delete.module.js"></script>
         <script src="menu-delete/menu-delete.component.js"></script>
-
+        <script src="menu-edit/menu-edit.module.js"></script>
+        <script src="menu-edit/menu-edit.component.js"></script>
     </head>
     <body>
 
