--- a/app_client/app/index.html
+++ b/app_client/app/index.html
@@ -81,13 +81,13 @@
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link" href="#">News & Events</a>
-                            </li>       
+                            </li>
                             <li class="nav-item">
                                 <a class="nav-link" href="#">Gallery</a>
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link" href="#footer">Contact</a>
-                            </li>                     
+                            </li>
                         </ul>
 
                         <!-- Navbar navigation: Right -->
@@ -119,7 +119,7 @@
                                     About Us
                                 </h5>
                                 <p>
-                                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Corrupti dolorum, sint corporis nostrum, possimus unde eos vitae eius quasi saepe.
+                                Second year students in TelecomSudParis
                                 </p>
 
                             </div>
@@ -131,13 +131,20 @@
                                 </h5>
                                 <ul class="section_footer__info">
                                     <li>
-                                        <i class="fas fa-map-marker-alt"></i> 1234 Altschul, New York, NY 10027-0000
+                                        <i class="fas fa-map-marker-alt"></i> 91000 Evry
                                     </li>
                                     <li>
-                                        <i class="fas fa-phone"></i> +1 987 654 3210
+                                        <i class="fas fa-phone"></i> +33 0123456789
                                     </li>
                                     <li>
-                                        <i class="far fa-envelope"></i> <a href="mailto:admin@domain.com">admin@domain.com</a>
+                                        <i class="far fa-envelope"></i>
+                                        hyun-chul.choi@telecom-sudparis.eu
+                                        shihui.huang@telecom-sudparis.eu
+                                        remi.lamiaux@telecom-sudparis.eu
+                                        arnaud.rouanet@telecom-sudparis.eu
+
+
+
                                     </li>
                                 </ul>
 
@@ -146,7 +153,7 @@
 
                                 <!-- Opening hours -->
                                 <h5 class="section_footer__heading">
-                                    Opening hours
+                                    Service hours
                                 </h5>
                                 <div class="section_footer__open">
                                     <div class="section_footer__open__days">Monday - Thursday</div>
