les commandes fonctionnentnpm start!

--- a/app_client/app/index.html
+++ b/app_client/app/index.html
@@ -49,6 +49,8 @@
         <script src="menu-delete/menu-delete.component.js"></script>
         <script src="menu-edit/menu-edit.module.js"></script>
         <script src="menu-edit/menu-edit.component.js"></script>
+        <script src="cart/cart.module.js"></script>
+        <script src="cart/cart.components.js"></script>
     </head>
     <body>
 
