--- a/app_client/app/menu-new/menu-new.template.html
+++ b/app_client/app/menu-new/menu-new.template.html
@@ -24,13 +24,11 @@
 
                         <!-- Heading -->
                         <h2 class="section__heading text-center">
-                            Online table reservation
+                            Create a menu
                         </h2>
 
                         <!-- Subheading -->
-                        <p class="section__subheading text-center">
-                        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quisquam illo praesentium sequi in cum, beatae maiores quae qui.
-                        </p>
+                        
 
                     </div>
                 </div> <!-- / .row -->
